Bug 29481 - [aarch64] Incorrect prologue analysis
Summary: [aarch64] Incorrect prologue analysis
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: tdep (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: ---
Assignee: Luis Machado
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-12 11:49 UTC by Luis Machado
Modified: 2022-08-18 15:44 UTC (History)
1 user (show)

See Also:
Host: *
Target: aarch64-*
Build: *
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Machado 2022-08-12 11:49:32 UTC
As pointed out in https://sourceware.org/pipermail/gdb-patches/2022-August/191357.html, GDB for aarch64 does some prologue analysis incorrectly and ends up skipping a non-existent prologue.
Comment 1 Luis Machado 2022-08-16 08:33:16 UTC
Checking this again, I noticed we do have a prologue for arm.
Comment 2 Luis Machado 2022-08-18 15:44:25 UTC
Fixed by 992545e7df523cb923eeeb21a753778a95da420e